# bevy_fsl_box_frame

./: Cargo.toml  OWNERS  README.md  flake.nix  shell.nix
assets/shaders/: solid_color.wgsl
examples/: demo.rs
src/: box_frame.rs  drag_face.rs  handle_visibility.rs  highlight.rs  lib.rs  picking_backend.rs  ray_map.rs  solid_color_material.rs
src/shaders/: solid_color.wgsl
