[package]
name = "bevy_fsl_box_frame"
version = "0.2.0"
description = "A gizmo for manipulating an OBB via 3D picking"
edition = "2021"
authors = ["Duncan Fairbanks <duncan.fairbanks@fslabs.ca>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_fsl_box_frame"
homepage = "https://github.com/ForesightMiningSoftwareCorporation/bevy_fsl_box_frame"
documentation = "https://docs.rs/bevy_fsl_box_frame"
readme = "README.md"
keywords = ["bevy", "gizmo"]
categories = ["3D", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5"
bevy_polyline = "0.8"
parry3d = "0.13"

[dependencies.bevy]
version = "0.12"
default-features = false
features = ["bevy_asset", "bevy_pbr"]

[dependencies.bevy_mod_picking]
version = "0.17"
default-features = false

[dependencies.nalgebra]
version = "0.32"
features = ["glam024"]

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["bevy/bevy_winit", "bevy/x11", "bevy/tonemapping_luts"]
